--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
 @import "tailwindcss";
+
+/* html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+} */
+
 /* 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
